# tinyMatirxMul

./: CMakeLists.txt  Makefile  README  build_android.sh
include/: tinyMatrixMul.h
src/: asmNeonApi.h  common.c  common.h  ntcopy.c  sgemm.c  tinyMatrixMul-time.c.bk  tinyMatrixMul.c  tinyMatrixMul.c.bk
src/arm64/: fmul1xkx1.S  fmul1xkx2.S  fmul1xkx4.S  fmul2xkx1.S  fmul2xkx2.S  fmul2xkx4.S  fmul4xkx1.S  fmul4xkx2.S  fmul4xkx4.S  ncopy.S  tcopy.S  tinySgemm1xkx1.S  tinySgemm1xkx2.S  tinySgemm1xkx4.S  tinySgemm2xkx1.S  tinySgemm2xkx2.S  tinySgemm2xkx4.S  tinySgemm4xkx1.S  tinySgemm4xkx2.S  tinySgemm4xkx4.S
test/: CMakeLists.txt  build_android.sh  ntcopy-test.cpp  sgemm-test.cpp
