cmake_minimum_required(VERSION 3.5)
PROJECT(libtinyMatrixMul)

message(CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR})
message(CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR})
message(PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR})

file(GLOB LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
file(GLOB LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -fPIC -O3 -std=c++11 -Wno-format")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -fPIC -g -std=c++11 -Wall")

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

ADD_LIBRARY(tinyMatrixMul SHARED ${LIB_SRC})
ADD_LIBRARY(tinyMatrixMul_static STATIC ${LIB_SRC})  

SET_TARGET_PROPERTIES(tinyMatrixMul PROPERTIES VERSION 1.2 SOVERSION 1)
SET_TARGET_PROPERTIES(tinyMatrixMul_static PROPERTIES OUTPUT_NAME "tinyMatrixMul")

set(FEATHER_INSTALL_DIR "${PROJECT_BINARY_DIR}/install")

message(CMAKE_INSTALL_PREFIX: ${FEATHER_INSTALL_DIR})
message(Library headers: ${LIB_HEADERS})

install(TARGETS tinyMatrixMul tinyMatrixMul_static 
LIBRARY DESTINATION "${FEATHER_INSTALL_DIR}/lib"
ARCHIVE DESTINATION "${FEATHER_INSTALL_DIR}/libstatic"
)
install(FILES ${LIB_HEADERS} DESTINATION "${FEATHER_INSTALL_DIR}/include")
